--- a/python.cfg
+++ b/python.cfg
@@ -16,3 +16,7 @@ AUTOIMPORT_COMPAT_IDAAPI = YES
 // Should the plugin automatically load a 6.95 bw-compatibility layer?
 AUTOIMPORT_COMPAT_IDA695 = YES
 
+// Is IDAPython namespace-aware?
+// If yes, then plugins, loaders & processor modules will each be loaded
+// within their own namespace, preventing namespace pollution.
+NAMESPACE_AWARE = YES
