--- a/tools/genhooks/doxy_gen_notifs.cfg.in
+++ b/tools/genhooks/doxy_gen_notifs.cfg.in
@@ -758,7 +758,7 @@ WARN_LOGFILE           =
 # spaces.
 # Note: If this tag is empty the current directory is searched.
 
-INPUT                  = ../../include/idp.hpp ../../include/dbg.hpp ../../include/kernwin.hpp
+INPUT                  = ${INCLUDES}
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
@@ -1944,7 +1944,7 @@ ENABLE_PREPROCESSING   = YES
 # The default value is: NO.
 # This tag requires that the tag ENABLE_PREPROCESSING is set to YES.
 
-MACRO_EXPANSION        = NO
+MACRO_EXPANSION        = YES
 
 # If the EXPAND_ONLY_PREDEF and MACRO_EXPANSION tags are both set to YES then
 # the macro expansion is limited to the macros specified with the PREDEFINED and
@@ -1952,7 +1952,7 @@ MACRO_EXPANSION        = NO
 # The default value is: NO.
 # This tag requires that the tag ENABLE_PREPROCESSING is set to YES.
 
-EXPAND_ONLY_PREDEF     = NO
+EXPAND_ONLY_PREDEF     = YES
 
 # If the SEARCH_INCLUDES tag is set to YES, the include files in the
 # INCLUDE_PATH will be searched if a #include is found.
@@ -1984,7 +1984,29 @@ INCLUDE_FILE_PATTERNS  =
 # recursively expanded use the := operator instead of the = operator.
 # This tag requires that the tag ENABLE_PREPROCESSING is set to YES.
 
-PREDEFINED             =
+PREDEFINED             = __cplusplus                        \
+                         __X86__                            \
+                         __NT__                             \
+                         __VC__                             \
+                         _MSC_VER                           \
+                         UNICODE                            \
+                         NO_OBSOLETE_FUNCS                  \
+                         define_place_exported_functions()= \
+                         define_place_virtual_functions()=  \
+                         AS_PRINTF()=                       \
+                         AS_SCANF()=                        \
+                         DEFINE_LIST_ITERATOR()=            \
+                         DEFINE_REVERSE_ITERATOR()=         \
+                         DEFINE_MEMORY_ALLOCATION_FUNCS()=  \
+                         DECLARE_LINEARRAY_HELPERS()=       \
+                         DEF_FIELD_METHOD()=                \
+                         DEF_SET_METHOD()=                  \
+                         DEF_STR_FIELD_METHOD()=            \
+                         DECLARE_TYPE_AS_MOVABLE()=         \
+                         DECLARE_TINFO_HELPERS()=           \
+                         DECLARE_COMPARISONS()=             \
+                         ENUM_SIZE()=                       \
+                         OBSOLETE()=
 
 # If the MACRO_EXPANSION and EXPAND_ONLY_PREDEF tags are set to YES then this
 # tag can be used to specify a list of macro names that should be expanded. The
