--- a/tools/genhooks/doxy_gen_notifs.cfg.in
+++ b/tools/genhooks/doxy_gen_notifs.cfg.in
@@ -1998,7 +1998,8 @@ PREDEFINED             = __cplusplus                        \
                          DECLARE_TINFO_HELPERS()=           \
                          DECLARE_COMPARISONS()=             \
                          ENUM_SIZE()=                       \
-                         OBSOLETE()=
+                         OBSOLETE()=                        \
+                         NONNULL_s=s
 
 # If the MACRO_EXPANSION and EXPAND_ONLY_PREDEF tags are set to YES then this
 # tag can be used to specify a list of macro names that should be expanded. The
